Fixed wireframe color in the page so its visible

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -332,3 +332,7 @@ figcaption {
 #subscribe {
     margin-left: 10px;
 }
+
+.wireframe {
+    color: white;
+}
